--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "cordova-android": "^8.1.0",
     "cordova-plugin-app-version": "^0.1.9",
     "cordova-plugin-badge": "^0.8.8",
-    "cordova-plugin-inappbrowser": "git+https://github.com/apache/cordova-plugin-inappbrowser.git#df623882c2404144123879b350d0f59f5694dbbe",
+    "cordova-plugin-inappbrowser": "3.2.0",
     "cordova-plugin-ionic-webview": "^4.2.1",
     "cordova-plugin-screen-orientation": "^3.0.2",
     "core-js": "^2.6.11",
