--- a/package.json
+++ b/package.json
@@ -14,61 +14,62 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "~9.1.9",
-    "@angular/compiler": "~9.1.9",
-    "@angular/core": "~9.1.9",
-    "@angular/forms": "~9.1.9",
-    "@angular/platform-browser": "~9.1.9",
-    "@angular/platform-browser-dynamic": "~9.1.9",
-    "@angular/router": "~9.1.9",
-    "@capacitor/android": "^2.1.1",
-    "@capacitor/core": "2.1.0",
-    "@capacitor/ios": "^2.1.0",
-    "@ionic-native/core": "^5.26.0",
-    "@ionic-native/in-app-browser": "^5.26.0",
-    "@ionic-native/ionic-webview": "^5.26.0",
-    "@ionic-native/local-notifications": "^5.26.0",
-    "@ionic-native/screen-orientation": "^5.26.0",
-    "@ionic-native/splash-screen": "^5.26.0",
-    "@ionic-native/status-bar": "^5.26.0",
-    "@ionic/angular": "^5.1.1",
+    "@angular/common": "^9.1.12",
+    "@angular/compiler": "^9.1.12",
+    "@angular/core": "^9.1.12",
+    "@angular/forms": "^9.1.12",
+    "@angular/platform-browser": "^9.1.12",
+    "@angular/platform-browser-dynamic": "^9.1.12",
+    "@angular/router": "^9.1.12",
+    "@capacitor/android": "^2.4.0",
+    "@capacitor/core": "^2.4.0",
+    "@capacitor/ios": "^2.4.0",
+    "@ionic-native/core": "^5.28.0",
+    "@ionic-native/in-app-browser": "^5.28.0",
+    "@ionic-native/ionic-webview": "^5.28.0",
+    "@ionic-native/local-notifications": "^5.28.0",
+    "@ionic-native/screen-orientation": "^5.28.0",
+    "@ionic-native/splash-screen": "^5.28.0",
+    "@ionic-native/status-bar": "^5.28.0",
+    "@ionic/angular": "^5.3.2",
     "@mapbox/polyline": "^1.1.1",
     "chart.js": "^2.9.3",
     "cordova-android": "^8.1.0",
     "cordova-plugin-app-version": "^0.1.9",
     "cordova-plugin-badge": "^0.8.8",
-    "cordova-plugin-inappbrowser": "git+https://github.com/apache/cordova-plugin-inappbrowser.git#df623882c2404144123879b350d0f59f5694dbbe",
+    "cordova-plugin-inappbrowser": "3.2.0",
     "cordova-plugin-ionic-webview": "^4.2.1",
     "cordova-plugin-screen-orientation": "^3.0.2",
     "core-js": "^2.6.11",
     "es6-promise-plugin": "^4.2.2",
-    "moment": "^2.26.0",
-    "ng2-charts": "^2.3.2",
-    "rxjs": "^6.5.5",
+    "ionic": "^5.4.16",
+    "moment": "^2.27.0",
+    "ng2-charts": "^2.4.0",
+    "rxjs": "^6.6.2",
     "tslib": "^1.13.0",
     "urlencode": "^1.1.0",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/architect": "~0.801.2",
-    "@angular-devkit/build-angular": "~0.901.7",
-    "@angular-devkit/core": "~9.1.7",
-    "@angular-devkit/schematics": "~9.1.7",
+    "@angular-devkit/build-angular": "^0.901.12",
+    "@angular-devkit/core": "^9.1.12",
+    "@angular-devkit/schematics": "^9.1.12",
     "@angular/cli": "9.1.7",
-    "@angular/compiler-cli": "~9.1.9",
-    "@angular/language-service": "~9.1.9",
+    "@angular/compiler-cli": "^9.1.12",
+    "@angular/language-service": "^9.1.12",
     "@capacitor/cli": "2.1.0",
-    "@ionic/angular-toolkit": "^2.2.0",
+    "@ionic/angular-toolkit": "^2.3.3",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^8.10.61",
+    "@types/node": "^8.10.62",
     "codelyzer": "^5.2.2",
     "cordova-plugin-device": "^2.0.3",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
-    "cordova-plugin-splashscreen": "^5.0.3",
+    "cordova-plugin-splashscreen": "^5.0.4",
     "cordova-plugin-statusbar": "^2.4.3",
     "cordova-plugin-whitelist": "^1.3.4",
-    "cordova-res": "^0.14.0",
+    "cordova-res": "^0.14.1",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
