--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@ionic-native/splash-screen": "^5.28.0",
     "@ionic-native/status-bar": "^5.28.0",
     "@ionic/angular": "^5.3.2",
+    "@ionic/lab": "^3.2.9",
     "@mapbox/polyline": "^1.1.1",
     "chart.js": "^2.9.3",
     "cordova-android": "^8.1.0",
