--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ionic-native/ionic-webview": "^5.28.0",
     "@ionic-native/local-notifications": "^5.29.0",
     "@ionic-native/screen-orientation": "^5.28.0",
+    "@ionic-native/social-sharing": "^5.30.0",
     "@ionic-native/splash-screen": "^5.28.0",
     "@ionic-native/status-bar": "^5.28.0",
     "@ionic/angular": "^5.3.2",
@@ -36,6 +37,8 @@
     "@mapbox/polyline": "^1.1.1",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
+    "@sentry/angular": "^5.28.0",
+    "@sentry/tracing": "^5.28.0",
     "chart.js": "^2.9.3",
     "cordova-android": "^8.1.0",
     "cordova-plugin-app-version": "^0.1.9",
@@ -44,6 +47,7 @@
     "cordova-plugin-ionic-webview": "^4.2.1",
     "cordova-plugin-local-notification": "^0.9.0-beta.2",
     "cordova-plugin-screen-orientation": "^3.0.2",
+    "cordova-plugin-x-socialsharing": "^6.0.2",
     "core-js": "^2.6.11",
     "dom-to-image": "^2.6.0",
     "dom-to-image-more": "^2.8.0",
