Add plugins to fix a bug in iOS when connecting to the google server

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "cordova-plugin-ionic-webview": "^4.2.1",
     "cordova-plugin-local-notification": "^0.9.0-beta.2",
     "cordova-plugin-screen-orientation": "^3.0.2",
+    "cordova-plugin-wkwebviewxhrfix": "git+https://github.com/TheMattRay/cordova-plugin-wkwebviewxhrfix.git",
     "cordova-plugin-x-socialsharing": "^6.0.2",
     "core-js": "^2.6.11",
     "dom-to-image": "^2.6.0",
@@ -108,7 +109,8 @@
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-screen-orientation": {},
-      "cordova-plugin-app-version": {}
+      "cordova-plugin-app-version": {},
+      "cordova-plugin-wkwebviewxhrfix": {}
     },
     "platforms": [
       "android"
