--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "carbonsum",
   "version": "1.1.0",
   "author": "Alexis Delrieu",
-  "homepage": "https://alexis.delrieu.me",
+  "homepage": "https://getcarbonsum.app",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
